Fix some problem, but part of tests doesn't work